# logtime

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
logtime/: config.py  logtime.py
tests/: test_parsing.py
